# petsc

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmessage  LICENSE  arch-summit-opt-gnu-kokkos-cuda.py  gmakefile  gmakefile.rules  gmakefile.test  makefile  paper.bib  paper.md
.gitlab/: CODEOWNERS
config/: builder2.py  cmakegen.py  configure.py  example_template.py  gmakegen.py  gmakegentest.py  install.py  petsc_harness.sh  query_tests.py  report_tests.py  testparse.py
config/BuildSystem/: RDict.py  args.py  graph.py  help.py  logger.py  make.py  maker.py  nargs.py  pythonpath.py  retrieval.py  script.py  (+1 more)
doc/: Makefile  build_classic_docs.py  conf.py  genteamtable.py  index.md  index.rst  make_links_relative.py  petsc.bib  requirements.txt
include/: makefile  nvmlPower.hpp  petsc.h  petsc.hpp  petsc_kokkos.hpp  petscaijdevice.h  petscaxb.h  petscbench.h  petscblaslapack.h  petscblaslapack_mangle.h  petscbt.h  petscbttype.h  petsccharacteristic.h  petscconvest.h  petscctable.h  petsccublas.h  petsccuda.h  petsccxxcomplexfix.h  petscdevice.h  petscdevice_cuda.h  petscdevice_cupm.h  petscdevice_hip.h  petscdevicescalar.h  petscdevicetypes.h  petscdm.h  petscdmadaptor.h  petscdmbf.h  petscdmceed.h  petscdmda.h  petscdmda_kokkos.hpp  petscdmdatypes.h  petscdmfield.h  petscdmlabel.h  petscdmmoab.h  petscdmnetwork.h  petscdmp4estfv.h  petscdmplex.h  petscdmplextransform.h  petscdmplextypes.h  petscdmstag.h  (+84 more)
src/vec/vec/examples/tutorials/: CMakeLists.txt  cmake_build.sh.in  ex1.c  ex11f90.F90  ex18f.F90  ex43f.F90  ex5f.F90  ex6f.F90  ex9.c  performance.c
(+4506 files in other folders)
